<resources>
    <string name="app_name">WnfxTest</string>

    <string name="title_items">Items</string>
    <string name="title_cart">Cart</string>

    <string name="goods_item_rating">%1$d★</string>
    <string name="goods_item_price">%1$d₽</string>

    <string name="toolbar_sort_title">Сортировка</string>
    <string name="toolbar_sort_by_up_price">Возрастание цены</string>
    <string name="toolbar_sort_by_down_price">Убывание цены</string>
    <string name="toolbar_sort_by_up_rating">Возрастание рейтинга</string>
    <string name="toolbar_sort_by_down_rating">Убывание рейтинга</string>

    <string name="cart_is_empty">Корзина пуста!</string>
</resources>